[package]
name = "cao"
version = "0.1.7"
description = "Calc-ium Oxide, a simple stack based command line calculator written in rust."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/Vonr/cao"
repository = "https://github.com/Vonr/cao"
keywords = ["calculator", "cli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-prime = "0.2.0"
atty = "0.2.14"
