[package]
name = "calcium-oxide"
version = "0.1.8"
description = "Calc-ium Oxide, a simple stack based command line calculator written in rust."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/Vonr/cao"
repository = "https://github.com/Vonr/cao"
keywords = ["calculator", "cli"]
edition = "2021"

[[bin]]
name = "cao"

[dependencies]
num-prime = "0.2.0"
atty = "0.2.14"
