[package]
name = "calcium-oxide"
version = "0.1.11"
description = "Calc-ium Oxide, a simple stack based command line calculator written in rust."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/Vonr/cao"
repository = "https://github.com/Vonr/cao"
keywords = ["calculator", "cli"]
edition = "2021"
include = ["src/bin/cao.rs", "README.md", "UNLICENSE"]

[[bin]]
name = "cao"

[dependencies]
num-prime = "0.2.0"
atty = "0.2.14"
fast-float = "0.2"
